--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,6 +1,13 @@
 <div class="container">
   <h1>SIGNUP!</h1>
   <hr>
+
+  <% if @errors %>
+    <% @errors.full_messages.each do |error| %>
+      <%= error %>
+    <% end %>
+  <% end %>
+
   <form action="/signup" method="POST">
     <input class="login" id="username" type="text" name="username" placeholder="Enter Username"/>
     <input class="login" id="password" type="password" name="password" placeholder="Enter Password"/>
