--- a/app/views/card/show.erb
+++ b/app/views/card/show.erb
@@ -6,5 +6,6 @@
 <p><%= @card.question %></p>
 
 <h4>WHAT IS YOUR ANSWER?!?!?!</h4>
+<form action="/decks/:deck_id/cards/:card_answer" method='GET'>
 
 
