--- a/app/views/deck/all.erb
+++ b/app/views/deck/all.erb
@@ -1,5 +1,5 @@
 <h1>Here are Your Decks!</h1>
 
 <%@decks.each do |deck| %>
-   <p><a href='/decks/<%= deck.id %>/cards/<%= deck.cards.first.id%>'> <%= deck.name %></a></p>
+   <p><a href='/decks/<%= deck.id %>'> <%= deck.name %></a></p>
 <%end%>
