--- a/app/views/card/show.erb
+++ b/app/views/card/show.erb
@@ -6,6 +6,7 @@
 <p><%= @card.question %></p>
 
 <h4>WHAT IS YOUR ANSWER?!?!?!</h4>
-<form action="/decks/:deck_id/cards/:card_answer" method='GET'>
-
-
+<form action="/decks/<%= @deck.id%>/cards/<%= @card.id%>/guess" method='GET'>
+  <input type="text" name="guess" placeholder="enter your guess here!"/>
+  <input type="submit" value="GUESSSSSSS MUTHA!"/>
+</form>
