--- a/app/views/deck/results.erb
+++ b/app/views/deck/results.erb
@@ -1,5 +1,5 @@
 <h1>These are your results for:</h1>
 <h2><%= @deck.name %></h2>
 <h3>You got <%= @round.number_correct %> correct out of <%= @deck.cards.count.</h3><br>
-<a href="/profile">Return to my profile</a><br>
-<a href="/decks">Play another deck</a>
+<button><a href="/profile">Return to my profile</a></button><br>
+<button><a href="/decks">Play another deck</a></button>
