--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,16 +1,12 @@
-<div>
-  <h1>GRANDMASTER FLASHCARDS!</h1>
-</div>
+<h1>GRANDMASTER FLASHCARDS</h1>
 
-  <% if @errors %>
-    <%= @errors %>
-  <% end %>
+<% if @errors %>
+  <%= @errors %>
+<% end %>
 
-<div class="signup">
-  <form action="/login" method="POST">
-    <input class="login" id="username" type="text" name="username" placeholder="Enter Username"/>
-    <input class="login" id="password" type="password" name="password" placeholder="Enter Password"/>
-    <input type="submit" value="login">
-    <a href="/signup">signup</a>
-  </form>
-</div>
+<form action="/login" method="POST">
+  <input class="login" id="username" type="text" name="username" placeholder="Enter Username"/>
+  <input class="login" id="password" type="password" name="password" placeholder="Enter Password"/>
+  <input type="submit" value="Login">
+</form>
+<a href="/signup">Signup</a>
