--- a/app/views/users/profile.erb
+++ b/app/views/users/profile.erb
@@ -1,10 +1,6 @@
-<div class="container">
-  <h1>Hey there, <%=@user.username %>!</h1><br>
-  <br>
-  <button><a href="/decks">Pick A Deck</a></button>
-  <button><a href="/logout">logout</a></button>
-  <h2>Your stats:</h2>
-  <% @rounds.each do |round| %>
-  	<p><%= round.deck.name %>: <%= round.number_correct %> correct out of <%= round.deck.cards.count %></p><br>
-  <% end %>
-</div>
+<button><a href="/decks">Pick A Deck</a></button>
+<h1>Hey there, <%=@user.username %>!</h1>
+<h2>Your Stats:</h2>
+<% @rounds.each do |round| %>
+	<p><%= round.deck.name %>: <%= round.number_correct %> correct out of <%= round.deck.cards.count %></p>
+<% end %>
