--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,11 +17,11 @@
 
   <title></title>
 </head>
-<body>
+<!-- <body background="/imgs/wall.jpg"> -->
   <header>
 
   </header>
-  <button><a href="/logout">Logout</a></button>
+  <button id="logout"><a href="/logout">Logout</a></button>
   <%= yield %>
 </body>
 </html>
